style: fix viewer overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,1 @@
 /* You can add global styles to this file, and also import other style files */
-
-:host {
-  display: block;
-}
-
-* {
-  overflow: visible !important;
-}
